--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="src/ball.js"></script>
     <script src="src/sketch.js"></script>
 
+    <link rel="stylesheet" href="styles.css" />
+
     <style>
       body {
         margin: 0;
