--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <script src="src/sketch.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <style>
       body {
@@ -27,5 +31,20 @@
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="footer">
+      <span>
+        Made by: Joël Kuijper
+      </span>
+      <div class="inner">
+        <a target="_blank" href="https://github.com/Joehoel">
+          <i class="fa fa-github fa-2x"> </i></a
+        ><a target="_blank" href="https://www.instagram.com/joel.kuijper/">
+          <i class="fa fa-instagram fa-2x"></i></a
+        ><a target="_blank" href="https://twitter.com/joel_kuijper">
+          <i class="fa fa-twitter fa-2x"> </i
+        ></a>
+      </div>
+    </div>
+  </body>
 </html>
